--- a/app.json
+++ b/app.json
@@ -28,7 +28,13 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-font",
+        {
+          "fonts": ["./assets/fonts/SF-Pro.ttf"]
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
@@ -37,6 +43,12 @@
       "eas": {
         "projectId": "dee220db-cec2-49d2-8794-f301d8e9aa6c"
       }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/dee220db-cec2-49d2-8794-f301d8e9aa6c"
     }
   }
 }
