--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-av": "^14.0.7",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -31,17 +34,21 @@
     "expo-system-ui": "~3.0.7",
     "expo-updates": "~0.25.27",
     "expo-web-browser": "~13.0.3",
+    "install": "^0.13.0",
+    "npm": "^10.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-date-picker": "^5.0.7",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.7.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
